--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-/* custom properties: colors */
+/* custom properties */
 :root {
     --primary: rgb(0, 80, 229);
     --secondary: rgb(88, 242, 101);
     --shadow: #c7c7c7;
     --dark: #010101;
-    --light: #fefff5;
+    --light: #fafafa;
+
+    --font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    --font-family-titles: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 /* fonts */
@@ -33,7 +36,16 @@
     padding: 0;
 }
 body {
-    background: url('img/random-square-halftone-pattern/1062.jpg');
+    background-color: rgb(243, 243, 236);
+    /* background: url('img/random-square-halftone-pattern/1062.jpg'); */
+}
+
+h1, h2, h3, h4 {
+    font-family: var(--font-family-titles);
+    text-transform: uppercase;
+    color: var(--primary);
+    background: var(--shadow);
+    box-shadow: 1px 1px 1px var(--shadow) inset;
 }
 
 .wrap {
@@ -42,7 +54,21 @@ body {
 }
 
 .gear, .icon {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--font-family);
+}
+
+.clearfix {
+    float: none;
+    clear: both;
+}
+
+a {
+    text-decoration: none;
+    color: var(--primary);
+    transition: all 300ms;
+}
+a:hover {
+    color: var(--secondary);
 }
 
 /* header */
@@ -51,7 +77,7 @@ body {
     height: 70px;
     background-color: var(--dark);
     color: var(--light);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--font-family);
 }
 #logo {
     float: left;
@@ -66,19 +92,21 @@ body {
     transition: all 300ms;
 }
 #logo .gear {
-    display: block;
+    /* display: block; */
     float: left;
     font-size: 30px;
     margin-top: 8px;
     margin-left: 26px;
 }
 #logo h3 {
-    display: block;
+    /* display: block; */
     float: right;
     font-size: 40px;
     margin-top: 5px;
     margin-right: 65px;
     transition: all 300ms;
+    background-color: transparent;
+    color: var(--light);
 }
 
 #menu {
@@ -94,7 +122,7 @@ body {
     line-height: 70px;
 }
 #menu ul li a  {
-    display: block;
+    /* display: block; */
     color: var(--light);
     text-decoration: none;
     transition: all 200ms;
@@ -115,15 +143,16 @@ body {
     margin: 20px auto;
 }
 #banner h1 {
-    display: block;
+    /* display: block; */
     width: 850px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: var(--light);
     font-size: 45px;
     font-weight: normal;
     letter-spacing: 2px;
     text-shadow: 2px 2px 1px var(--shadow);
+    background: var(--secondary);
     margin: 27px auto;
+    box-shadow: none;
 }
 
 /* cards */
@@ -143,7 +172,7 @@ body {
     margin-right: 0;
 }
 .card .icon {
-    display: block;
+    /* display: block; */
     width: 100%;
     height: 130px;
     font-size: 50px;
@@ -154,15 +183,223 @@ body {
 .card .category {
     width: 100%;
     height: 50px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--font-family);
     font-size: 21px;
     font-weight: bold;
     text-align: center;
     color: var(--primary);
 }
 .card .description {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: var(--font-family);
     text-align: center;
     color: var(--primary);
     font-size: 15px ;
+}
+
+/* aside */
+#lateral {
+    width: 300px;
+    min-height: 1200px;
+    font-family: var(--font-family);
+    float: right;
+}
+
+aside h3 {
+    display: block;
+    width: auto;
+    height: 45px;
+    line-height: 45px;
+    box-shadow: 0px 1px 0 var(--shadow),
+                1px 2px 0 var(--shadow),
+                2px 3px 0 var(--shadow),
+                3px 4px 0 var(--shadow);
+    font-size: 30px;
+    font-weight: normal;
+    letter-spacing: 2px;
+    padding-left: 25px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+#lateral h3:first-child {
+    margin-top: 0;   
+}
+
+#search {
+    width: 90%;
+    height: 30px;
+    margin: 10px auto;
+    background-color: var(--light);
+    border: 1px solid var(--shadow);
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px var(--shadow) inset;
+}
+
+#lateral input[type="text"] {
+    width: 85%;
+    height: 30px;
+    border: none;
+    padding-left: 5px;
+    border-radius: 5px;
+    background-color: transparent;
+    color: var(--light);
+    transition: all ;
+}
+#lateral input[type="text"]:focus {
+    color: var(--primary);
+}
+#lateral input[type="button"], #lateral input[type="submit"] {
+    height: 30px;
+    border: none;
+    font-size: 16px;
+    background-color: transparent;
+    color: var(--dark);
+    cursor: pointer;
+}
+
+.aside-box {
+    width: 100%;
+    height: 240px;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding-top: 2px;
+    background-color: var(--light);
+    border: 1px solid var(--dark);
+    box-shadow: 0px 0px 1px var(--shadow),
+                0px 3px 7px var(--shadow),
+                0px 1px 1px var(--shadow);
+}
+
+#login input[type="email"], #login input[type="password"] {
+    /* display: block; */
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 90%;
+    height: 30px;
+    border: 1px solid var(--light);
+    box-shadow: 1px 1px 1px var(--light) inset;
+    border-radius: 5px;
+    /* padding-left: 30px; */
+    color: var(--shadow);
+}
+#login input[type="email"]:focus, #login input[type="password"]:focus {
+    color: var(--dark);
+    box-shadow: 1px 1px 1px var(--shadow) inset;
+}
+
+/* #login #user, #login #password {
+    /* display: block; */
+    text-align: center;
+    position: absolute;
+    margin-left: 15px;
+    margin-top: 6px;
+    height: 30px;
+}
+#login #password {
+    margin-left: 18px;
+    margin-top: 25px;
+    font-size: 20px;
+} */
+#login input [type="submit"], #login input [type="button"], #login input [type="reset"], #login button {
+    /* display: block; */
+    text-align: center;
+    /* width: 100px;
+    height: 35px;
+    margin-top: 20px; */
+    color: var(--light);
+    background: var(--primary);
+    border: 1px solid var(--shadow);
+    /* border-radius: 0; */
+    cursor: pointer;
+    font-size: 15px;
+    font-family: var(--font-family);
+    font-weight: lighter;
+    margin-left: 17px;
+}
+
+/* articles */
+#articles {
+    width: 860px;
+    float: left;
+}
+#articles h2 {
+    /* display: block; */
+    width: 100%;
+    height: 75px;
+    line-height: 75px;
+    text-align: center;
+    font-size: 40px;
+    font-weight: normal;
+    letter-spacing: 2px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+#articles article {
+    width: 100%;
+    height: auto;
+    border: 1px solid var(--shadow);
+    margin: 40px auto;
+    padding: 10px;
+    font-family: var(--font-family);
+    background: var(--light);
+    color: var(--dark);
+    box-shadow: 1px 1px 2px var(--light);
+}
+#articles article h4 {
+    /* display: block; */
+    font-size: 23px;
+    margin: 3px;
+}
+#articles article h4 a {
+    /* display: block; */
+    font-size: 23px;
+    margin: 3px;
+}
+#articles .data {
+    float: right;
+    background: var(--secondary);
+    height: 30px;
+    line-height: 30px;
+    margin: -10px;
+    padding: 4px;
+    font-size: 13px;
+    border-radius: 0 0 0 5px;
+}
+#articles .data span {
+    margin: 6px;
+}
+#articles .data p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+#blog {
+    height: 100px;
+    margin-top: 60px;
+    line-height: 100px;
+    text-align: center;
+}
+#blog a {
+    font-size: 40px;
+    letter-spacing: 3px;
+}
+
+/* footer  */
+#footer {
+    width: 100%;
+    height: 470px;
+    background-color: var(--dark);
+    color: var(--light);
+    overflow: hidden;
+}
+#footer .wrap > div {
+    float: left;
+    width: 30%;
+    height: 370px;
+    margin: 40px;
+    text-align: center;
+    color: var(--light);
+    font-family: var(--font-family);
 }
