--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* custom properties */
 :root {
-    --primary: rgb(0, 80, 229);
+    --primary: rgb(0, 229, 118);
     --secondary: rgb(88, 242, 101);
-    --shadow: #c7c7c7;
+    --shadow: #d5e2c7;
     --dark: #010101;
     --light: #fafafa;
 
@@ -97,7 +97,32 @@ a:hover {
     font-size: 30px;
     margin-top: 8px;
     margin-left: 26px;
+    animation-name: rotate-gear;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+
 }
+@keyframes rotate-gear {
+    from {
+        transform: rotateZ(0deg);
+    } to {
+        transform: rotateZ(360deg);
+    }
+}
+#logo:hover .gear {
+    animation: from-bellow 500ms linear;
+}
+@keyframes from-bellow {
+    0% {
+        transform: translateY(0%);
+    } 50% {
+        transform: translateY(200%);
+    } 100% {
+        transform: translateY(0%);
+    }
+}
+
 #logo h3 {
     /* display: block; */
     float: right;
@@ -107,6 +132,16 @@ a:hover {
     transition: all 300ms;
     background-color: transparent;
     color: var(--light);
+}
+#logo:hover h3 {
+    animation: from-right 300ms linear;
+}
+@keyframes from-right {
+    from {
+        transform: translateX(200%);
+    } to {
+        transform: translateX(0%);
+    }
 }
 
 #menu {
@@ -141,6 +176,14 @@ a:hover {
     background-color: var(--secondary);
     background-position: -200px -200px;
     margin: 20px auto;
+    animation: back-banner 10s linear;
+}
+@keyframes back-banner {
+    0% {
+        background-position: 0 0;
+    } 100% {
+        background-position: -200px -200px;
+    }
 }
 #banner h1 {
     /* display: block; */
@@ -153,6 +196,26 @@ a:hover {
     background: var(--secondary);
     margin: 27px auto;
     box-shadow: none;
+    animation: show-text 10s linear;
+}
+@keyframes show-text {
+    0% {
+        transform: translateX(-600%) scale(5, 5);
+        opacity: 1;
+    } 50% {
+        transform: translateX(600%) scale(5, 5);
+        opacity: 1;
+    } 75% {
+        transform: translateX(600%) scale(5, 5);
+        text-shadow: none;
+        color: transparent;
+        opacity: 0;
+    } 100% {
+        transform: translateX(0%) scale(1, 1);
+        text-shadow: 2px 2px 1px var(--dark);
+        color: var(--light);
+        opacity: 0;
+    }
 }
 
 /* cards */
@@ -179,6 +242,19 @@ a:hover {
     line-height: 110px;
     text-align: center;
     margin: 0 auto;
+    transition: all 300ms;
+}
+.card:hover .icon {
+    font-size: 70px;
+    color: var(--primary);
+    animation: show-icon 300ms linear;
+}
+@keyframes show-icon {
+    from {
+        transform: translateY(-200%);
+    } to {
+        transform: translateY(0%);
+    }
 }
 .card .category {
     width: 100%;
@@ -189,11 +265,38 @@ a:hover {
     text-align: center;
     color: var(--primary);
 }
+.card:hover .category {
+    color: var(--light);
+    animation: show-category 400ms linear;
+}
+@keyframes show-category {
+    from {
+        transform: translateY(-300%);
+        color: var(--dark);
+    } to {
+        transform: translateY(0%);
+        color: var(--light);
+    }
+}
 .card .description {
     font-family: var(--font-family);
     text-align: center;
     color: var(--primary);
     font-size: 15px ;
+    transition: all 300ms;
+}
+.card:hover .description {
+    color: var(--light);
+    animation: show-description 400ms linear;
+}
+@keyframes show-description {
+    from {
+        transform: translateX(-300%);
+        color: var(--dark);
+    } to {
+        transform: translateX(0%);
+        color: var(--light);
+    }
 }
 
 /* aside */
@@ -380,10 +483,39 @@ aside h3 {
     margin-top: 60px;
     line-height: 100px;
     text-align: center;
+    transition: all 1s;
+}
+#blog:hover {
+    border: 10px solid var(--primary);
+    border-radius: 240px;
+    box-shadow: 0 0 10px var(--shadow);
+    animation: blink 10s infinite linear;
 }
 #blog a {
     font-size: 40px;
     letter-spacing: 3px;
+    transition: all 1s;
+}
+#blog:hover a {
+    box-shadow: 1px 1px 1px var(--shadow),
+                1px 2px 1px var(--shadow),
+                1px 3px 1px var(--shadow),
+                1px 4px 1px var(--shadow),
+                1px 5px 1px var(--shadow),
+                1px 6px 1px var(--shadow);
+}
+@keyframes blink {
+    0% {
+        border: 10px solid var(--primary);
+    } 25% {
+        border: 10px solid var(--secondary);
+    } 50% {
+        border: 10px solid #ffff00;
+    } 75% {
+        border: 10px solid var(--light);
+    } 100% {
+        border: 10px solid var(--primary);
+    }
 }
 
 /* footer  */
@@ -402,4 +534,20 @@ aside h3 {
     text-align: center;
     color: var(--light);
     font-family: var(--font-family);
+}
+#footer ul li {
+    margin-top: 10px;
+    padding: 5px;
+    border-bottom: 1px solid var(--light);
+}
+#footer ul li a {
+    display: block;
+    height: 40px;
+    transition: all 300ms;
+}
+#footer ul li:hover a {
+    padding-left: 40px;
+    color: var(--light);
+    
+    transition: all 300ms;
 }
